--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>you are mine</title>
+<style>
+    body{
+    background-color: grey;
+    background-image: url(birthday.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.image{
+    margin-top: 30px;
+    margin-left: 418px;
+    border-radius: 40px;
+    height: auto;
+    width:45%;
+}
+img {
+    opacity: 0.5;
+  }
+  
+  img:hover {
+    opacity: 1.5;
+}
+    </style>
 </head>
-
 <body>
-<h1>hello world</h1>    
+    <div class="container">
+        <img src="mine01.jpeg" alt="mine" class="image" >
+            
+        </div>
+      </div>
+    
 </body>
 </html>
